API ristrutturata e unit test aggiunti